Adding extra options to run spark with java 21